--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@tailwindcss/cli": "^4.1.13",
+    "player.style": "^0.2.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
